[gd_scene load_steps=26 format=2]

[ext_resource path="res://Recursos/Fuentes/Montserrat-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Recursos/Fuentes/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Recursos/Iconos/Spinner.png" type="Texture" id=3]
[ext_resource path="res://Contenedores/IngresoDatos.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=53]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=55]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=54]
thickness = 3

[sub_resource type="DynamicFont" id=58]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=59]
bg_color = Color( 0.866667, 0.258824, 0.258824, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=48]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=51]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.603922, 0.564706, 0.564706, 1 )

[sub_resource type="DynamicFont" id=49]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=52]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=50]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0431373, 0.368627, 0.843137, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0392157, 0.345098, 0.792157, 1 )

[sub_resource type="StyleBoxFlat" id=45]
bg_color = Color( 0.0509804, 0.431373, 0.992157, 1 )

[sub_resource type="Animation" id=56]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../ParteCentral/LabelMensaje:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ParteCentral/Notas:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 150.5, 841 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../ParteCentral/LabelMensaje:custom_styles/normal:bg_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.258824, 0.258824, 1 ) ]
}

[sub_resource type="Animation" id=60]
resource_name = "desplazamiento_error"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../ParteCentral/Notas:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 150.5, 841 ), Vector2( 150.5, 885 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ParteCentral/LabelMensaje:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=64]
resource_name = "error_rol"
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../ParteCentral/LabelMensaje:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ParteCentral/LabelMensaje:custom_styles/normal:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.258824, 0.258824, 1 ) ]
}

[sub_resource type="Animation" id=57]
resource_name = "girar"
loop = true

[sub_resource type="Animation" id=61]
resource_name = "parpadeo_invalido"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../ParteCentral/LabelMensaje:custom_styles/normal:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.258824, 0.258824, 1 ), Color( 0.521569, 0.0823529, 0.0823529, 1 ), Color( 0.866667, 0.258824, 0.258824, 1 ), Color( 0.521569, 0.0823529, 0.0823529, 1 ), Color( 0.866667, 0.258824, 0.258824, 1 ) ]
}

[sub_resource type="Animation" id=62]
resource_name = "repliegue_desplazamiento_error"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../ParteCentral/Notas:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 150.5, 885 ), Vector2( 150.5, 841 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ParteCentral/LabelMensaje:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=63]
resource_name = "sesion_iniciada"
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../ParteCentral/LabelMensaje:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ParteCentral/LabelMensaje:custom_styles/normal:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.262745, 0.933333, 0.494118, 1 ) ]
}

[node name="IngresoDatos" type="Panel"]
margin_left = 119.0
margin_top = 648.0
margin_right = 962.0
margin_bottom = 1269.0
custom_styles/panel = SubResource( 53 )
script = ExtResource( 4 )

[node name="ParteSuperior" type="Node" parent="."]

[node name="Label" type="Label" parent="ParteSuperior"]
margin_left = 322.0
margin_top = 672.0
margin_right = 758.0
margin_bottom = 740.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 55 )
text = "Inicio de sesi칩n"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="ParteSuperior"]
margin_left = 118.5
margin_top = 764.0
margin_right = 961.5
margin_bottom = 768.0
custom_styles/separator = SubResource( 54 )

[node name="Spinner" type="Sprite" parent="ParteSuperior"]
visible = false
position = Vector2( 870, 707 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="ParteCentral" type="Node" parent="."]

[node name="LabelMensaje" type="Label" parent="ParteCentral"]
visible = false
margin_left = 150.0
margin_top = 789.0
margin_right = 930.0
margin_bottom = 832.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 58 )
custom_styles/normal = SubResource( 59 )
align = 1
valign = 1

[node name="Datos" type="VBoxContainer" parent="ParteCentral"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -389.5
margin_top = -119.0
margin_right = 390.5
margin_bottom = 241.0
custom_constants/separation = 20

[node name="LabelCE" type="Label" parent="ParteCentral/Datos"]
margin_right = 780.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 48 )
text = "Correo electr칩nico:"
valign = 1

[node name="LineEdit" type="LineEdit" parent="ParteCentral/Datos"]
margin_top = 63.0
margin_right = 780.0
margin_bottom = 118.0
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 51 )
custom_styles/normal = SubResource( 5 )
caret_blink = true
caret_blink_speed = 0.5

[node name="LabelContrase침a" type="Label" parent="ParteCentral/Datos"]
margin_top = 138.0
margin_right = 780.0
margin_bottom = 181.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 49 )
text = "Contrase침a:"
valign = 1

[node name="LineEditContrasenha" type="LineEdit" parent="ParteCentral/Datos"]
margin_top = 201.0
margin_right = 780.0
margin_bottom = 256.0
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 52 )
custom_styles/normal = SubResource( 5 )
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="HSeparator" type="HSeparator" parent="ParteCentral/Datos"]
margin_top = 276.0
margin_right = 780.0
margin_bottom = 280.0

[node name="ButtonIS" type="Button" parent="ParteCentral/Datos"]
margin_top = 300.0
margin_right = 780.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 1
custom_fonts/font = SubResource( 50 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 45 )
text = "Iniciar sesi칩n"

[node name="Animacion" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animacion"]
autoplay = "default"
anims/default = SubResource( 56 )
anims/desplazamiento_error = SubResource( 60 )
anims/error_rol = SubResource( 64 )
anims/girar = SubResource( 57 )
anims/parpadeo_invalido = SubResource( 61 )
anims/repliegue_desplazamiento_error = SubResource( 62 )
anims/sesion_iniciada = SubResource( 63 )

[connection signal="text_changed" from="ParteCentral/Datos/LineEditContrasenha" to="." method="_on_LineEditContrasenha_text_changed"]
[connection signal="text_entered" from="ParteCentral/Datos/LineEditContrasenha" to="." method="_on_LineEditContrasenha_text_entered"]
